compiler/fir/analysis-tests/testData/resolve/extendedCheckers/unused/invokeSuspend.kt
suspend fun foo(action: suspend () -> Unit) {
    val <!UNUSED_VARIABLE!>x<!> = action

    x()
}
